--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="dark_blue">#2874A6 </color>
+    <color name="blue">#5DADE2</color>
+    <color name="light_blue">#AED6F1 </color>
+    <color name="light_light_blue">#D6EAF8</color>
 </resources>
