--- a/app/src/main/res/layout/activity_home_isolation_result.xml
+++ b/app/src/main/res/layout/activity_home_isolation_result.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/light_blue"
-    tools:context=".HomeIsolationResultActivity">
+    tools:context="com.myselamat.app.HomeIsolationResultActivity">
 
     <LinearLayout
         android:id="@+id/linearLayout"
