--- a/app/src/main/res/layout/fragment_survey.xml
+++ b/app/src/main/res/layout/fragment_survey.xml
@@ -5,8 +5,8 @@
     android:id="@+id/homeIsolationLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/teal_700"
-    tools:context=".SurveyFragment">
+    android:background="@color/blue"
+    tools:context="com.myselamat.app.SurveyFragment">
 
 
     <com.mikhaellopez.circularimageview.CircularImageView
@@ -43,7 +43,7 @@
         android:id="@+id/constraintLayout3"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="#C6F497"
+        android:background="@color/light_blue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="parent"
         app:layout_constraintHorizontal_bias="0.51"
@@ -115,7 +115,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="#00FFFFFF"
-            android:src="@mipmap/ic_syringe_foreground"
+            android:src="@mipmap/ic_vaccine"
             app:civ_border_color="#FF000000"
             app:civ_border_width="2dp"
             app:layout_constraintBottom_toBottomOf="parent"
