--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.myselamat.app.HistoryActivity">
+    tools:context="com.myselamat.HistoryActivity">
 
     <ScrollView
         android:layout_width="match_parent"
