--- a/app/src/main/res/layout/activity_home_isolation.xml
+++ b/app/src/main/res/layout/activity_home_isolation.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/blue"
-    tools:context="com.myselamat.app.HomeIsolationActivity">
+    tools:context="com.myselamat.HomeIsolationActivity">
 
     <include
         android:id="@+id/include"
@@ -32,7 +32,7 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView"
-        android:name="my.edu.utar.myselamat.HomeIsoFragment"
+        android:name="com.myselamat.HomeIsoFragment"
         android:layout_width="match_parent"
         android:layout_height="485dp"
         android:background="@color/light_blue"
