--- a/app/src/main/res/layout/activity_risk_prediction.xml
+++ b/app/src/main/res/layout/activity_risk_prediction.xml
@@ -5,10 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/light_blue"
-    tools:context="com.myselamat.app.RiskPredictionActivity">
+    tools:context="com.myselamat.RiskPredictionActivity">
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/tv_rp_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -16,6 +16,7 @@
         android:textColor="#000000"
         android:textSize="34sp"
         android:typeface="monospace"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
@@ -28,11 +29,12 @@
         android:layout_width="101dp"
         android:layout_height="104dp"
         android:indeterminate="true"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7"
-        app:layout_constraintVertical_bias="0.12" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_rp_header"
+        app:layout_constraintVertical_bias="0.105" />
 
     <TextView
         android:id="@+id/tv_riskResult"
@@ -51,7 +53,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/progress_anim"
-        app:layout_constraintVertical_bias="0.072" />
+        app:layout_constraintVertical_bias="0.07" />
 
     <Button
         android:id="@+id/btn_risk_pred_return"
@@ -60,12 +62,27 @@
         android:padding="20dp"
         android:text="Back To\nHome Page"
         android:textSize="24sp"
-        android:visibility="gone"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_riskResult"
         app:layout_constraintVertical_bias="0.241" />
+
+    <Button
+        android:id="@+id/btn_getRisk"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="30dp"
+        android:text="Get Risk"
+        android:textSize="30sp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.499" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
