--- a/app/src/main/res/layout/activity_vaccine.xml
+++ b/app/src/main/res/layout/activity_vaccine.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.myselamat.app.VaccineActivity">
+    tools:context="com.myselamat.VaccineActivity">
 
     <TextView
         android:id="@+id/tv_qrScan_demo"
