--- a/app/src/main/res/layout/fragment_home_iso.xml
+++ b/app/src/main/res/layout/fragment_home_iso.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/light_blue"
-    tools:context="com.myselamat.app.HomeIsoFragment" >
+    tools:context="com.myselamat.HomeIsoFragment" >
 
     <ImageView
         android:id="@+id/imageView"
