--- a/app/src/main/res/layout/fragment_survey.xml
+++ b/app/src/main/res/layout/fragment_survey.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/blue"
-    tools:context="com.myselamat.app.SurveyFragment">
+    tools:context="com.myselamat.SurveyFragment">
 
 
     <com.mikhaellopez.circularimageview.CircularImageView
