--- a/app/src/main/res/layout/activity_home_isolation.xml
+++ b/app/src/main/res/layout/activity_home_isolation.xml
@@ -9,7 +9,7 @@
     tools:context="com.myselamat.HomeIsolationActivity">
 
     <include
-        android:id="@+id/include"
+        android:id="@+id/main_toolbar"
         layout="@layout/main_toolbar" />
 
     <TextView
@@ -27,7 +27,7 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toBottomOf="@+id/include"
+        app:layout_constraintTop_toBottomOf="@+id/main_toolbar"
         app:layout_constraintVertical_bias="0.357" />
 
     <androidx.fragment.app.FragmentContainerView
