--- a/app/src/main/res/layout/fragment_qr.xml
+++ b/app/src/main/res/layout/fragment_qr.xml
@@ -5,13 +5,8 @@
     android:id="@+id/hotspotLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.myselamat.HotspotFragment">
+    tools:context="com.myselamat.QRFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <fragment
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/google_map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"/>
+    <!-- TODO: Update layout -->
 
 </RelativeLayout>
