--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,9 +7,9 @@
         android:icon="@drawable/ic_baseline_person_24"/>
 
     <item
-        android:id="@+id/hotspotFragment"
-        android:title="Hotspot"
-        android:icon="@drawable/ic_baseline_location_on_24"/>
+        android:id="@+id/QRFragment"
+        android:title="QR Scan"
+        android:icon="@drawable/ic_baseline_qr_code_scanner_24"/>
 
     <item
         android:id="@+id/surveyFragment"
